# mnemonic-generator

./: Cargo.toml  README.md
mnemonic_generator/: Cargo.toml  README.md
mnemonic_generator/src/: lib.rs
