[package]
name = "mnemonic_generator"
version = "0.1.0"
edition = "2021"
authors = ["Viraj Patva"]
description = "A simple mnemonic generator"
license = "Apache-2.0"
repository = "https://github.com/vkpatva/mnemonic-generator"
homepage = "https://github.com/vkpatva/mnemonic-generator"
readme = "README.md"
categories = ["cryptography", "mnemonic", "generator", "BIP-39"]

[dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
